# gluesql-derive

./: Cargo.toml  README.md
gluesql-derive-proc/: Cargo.toml
gluesql-derive-proc/src/: field.rs  from_row.rs  lib.rs  reflect_row.rs  to_row.rs
src/: from_gluesql.rs  lib.rs  reflect_gluesql.rs  to_gluesql.rs
tests/: test_fromgluesql.rs  test_general.rs  test_reflectgluesql.rs  test_togluesql.rs
