[workspace]
members = ["gluesql-derive-proc"]

[package]
name = "gluesql-derive"
version = "0.2.5"
authors = ["JakkuSakura <qjk2001@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
description = "Derive traits for GlueSQL"
repository = "https://github.com/JakkuSakura/gluesql-derive"


[dependencies]
gluesql-derive-proc = { path = "gluesql-derive-proc", version = "0.2.1" }
gluesql-core = "0.15.0"
thiserror = "1.0"
rust_decimal = "1"
chrono = "0.4"
uuid = "1.7"
bytes = "1.5"

[dev-dependencies]
gluesql-shared-memory-storage = "0.15.0"
gluesql-utils = "0.15.0"
tokio = { version = "1", features = ["full"] }
eyre = "0.6.12"