[package]
name = "gluesql-derive-proc"
version = "0.1.0"
authors = ["JakkuSakura <qjk2001@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"
description = "Derive macros for GlueSQL"

[lib]
proc-macro = true
test = false

[dependencies]
syn = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
heck = "0.4"
darling = "0.20.3"
